<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preference_category_servers" >
        <CheckBoxPreference
            android:key="@string/persistent_mode_preference_key"
            android:summary="@string/summary_persistent_mode"
            android:title="@string/title_persistent_mode" />
        <CheckBoxPreference
            android:key="@string/jsonp_preference_key"
            android:summaryOff="@string/summary_jsonp_server"
            android:title="@string/title_jsonp_server" />

        <PreferenceScreen
            android:key="@string/origin_list_preference_key"
            android:summary=""
            android:title="@string/title_activity_origin_list" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_devices" >
        <PreferenceScreen
            android:key="@string/delete_all_inactive_devices_preference_key"
            android:summary=""
            android:title="@string/title_delete_all_inactive_devices" />
        <PreferenceScreen
            android:key="@string/plugin_list_preference_key"
            android:summary=""
            android:title="@string/title_activity_plugin_list" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_network" >
        <PreferenceScreen
            android:key="@string/access_point_list_preference_key"
            android:summary=""
            android:title="@string/title_activity_access_point_list" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_information" >
        <PreferenceScreen
            android:key="@string/open_source_licenses_key"
            android:summary=""
            android:title="@string/title_open_source_licenses" >
        </PreferenceScreen>
        <PreferenceScreen
            android:key="@string/about_kadecot_key"
            android:summary=""
            android:title="@string/title_about_kadecot" >
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>